# acw02_zb

./: .gitignore  CMakeLists.txt  README.md  acw02-zb.js  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
PCB/acw02_zb-v1.1/: MountingHole_2.5mm_Pad.kicad_mod  SOIC127P600X170-9N.kicad_mod  acw02_zb-v1.1.bak  acw02_zb-v1.1.kicad_dru  acw02_zb-v1.1.kicad_pcb  acw02_zb-v1.1.kicad_prl  acw02_zb-v1.1.kicad_pro  acw02_zb-v1.1.kicad_sch  fp-lib-table  report.txt  sym-lib-table
PCB/acw02_zb-v1.1/Gerber/: acw02_zb-v1.1-B_Cu.gbl  acw02_zb-v1.1-B_Mask.gbs  acw02_zb-v1.1-B_Paste.gbp  acw02_zb-v1.1-B_Silkscreen.gbo  acw02_zb-v1.1-Edge_Cuts.gm1  acw02_zb-v1.1-F_Cu.gtl  acw02_zb-v1.1-F_Mask.gts  acw02_zb-v1.1-F_Paste.gtp  acw02_zb-v1.1-F_Silkscreen.gto  acw02_zb-v1.1-NPTH.drl  acw02_zb-v1.1-PTH.drl
main/: CMakeLists.txt  board.h  esp_zb_hvac.c  esp_zb_ota.c  esp_zb_ota.h  hvac_driver.c  hvac_driver.h
